--- a/src/app/components/attorneys/page-hero/page-hero.html
+++ b/src/app/components/attorneys/page-hero/page-hero.html
@@ -1,6 +1,6 @@
 <div class="w-full max-w-[1280px] px-4 md:px-10 py-6 mx-auto">
   <div class="relative overflow-hidden rounded-xl bg-cover bg-center min-h-[400px] flex flex-col items-center justify-center text-center p-8 gap-6 shadow-sm"
-    style='background-image: linear-gradient(rgba(16, 22, 34, 0.7) 0%, rgba(16, 22, 34, 0.5) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuDg_YvEmK2EWyvD13MWHNIEO-jxtUBMbR2Mzlmvm09dYuk432lcDy01vaQiw5Z2FbYZD-47Hv_eJKUyqDS75arlE0HGmXmc_135TrM-Sj9xzVybOfieJos9MGSdfnK5tbTsKs4TAaz3onq6P6oqsC1RRvyjskKRQG_OKnrvL-D78iSjAUbeod9m4wfQ29XUCQwFgCEG40Nh4UzSZollH98nUJpQI_0d8I3Zwn1LzmJ_qrxy_AKdRHgrrKHwtgOdcBruBJfNfA4Whjph");'>
+    style='background-image: linear-gradient(rgba(16, 22, 34, 0.7) 0%, rgba(16, 22, 34, 0.5) 100%), url("images/meeting.png");'>
     <div class="flex flex-col gap-3 max-w-3xl">
       <h1 class="text-white text-4xl md:text-5xl font-black leading-tight tracking-tight">
         Expert Counsel. Dedicated Partners.
