--- a/src/app/components/practice-areas/testimonial-quote/testimonial-quote.html
+++ b/src/app/components/practice-areas/testimonial-quote/testimonial-quote.html
@@ -4,12 +4,12 @@
     <h3 class="text-2xl md:text-3xl font-bold text-[#0d121b] dark:text-white leading-snug">
       "They handled my corporate merger with extreme professionalism and attention to detail. I couldn't have asked for a better partner."
     </h3>
-    <div class="flex flex-col items-center gap-2">
+    <!-- <div class="flex flex-col items-center gap-2">
       <div class="size-12 rounded-full bg-gray-200 bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAhTRlIsJCtXZhtnM29YQ9z1PUuHbhhd57_3u9-RxBjuDTbwPYJ5aYnlC8_J7r-qIksVNOzU5L0GtqYMZTsky7DVghoCNPZTv0cEG7s5S0r0zStgOAcF_fsb8yqUU8p_rB9b_RMQ6lwuMARhKXh0ZbD7I9AzzMhcGIuY4QOCkTUvkxcBKFP-Rs7Yl_1hIlGjUVCRBMlc9FYAorWoyDZBjuN8LTIW13y_fG7zRJNpvv9S_CDDm_oNDUr9RtUop5wq9THy5q48OB_cjss");'></div>
       <div>
         <p class="text-[#0d121b] dark:text-white font-bold text-sm">Michael Anderson</p>
         <p class="text-[#4c669a] dark:text-gray-400 text-xs">CEO, TechStart Inc.</p>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
