--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -2,6 +2,6 @@
   <app-hero-section></app-hero-section>
   <app-stats-bar></app-stats-bar>
   <app-story-timeline></app-story-timeline>
-  <app-team-section></app-team-section>
+  <app-attorneys></app-attorneys>
   <app-cta></app-cta>
 </div>
