--- a/src/components/hero/hero.html
+++ b/src/components/hero/hero.html
@@ -39,7 +39,7 @@
       </div>
       <div class="flex-1 w-full relative">
         <div class="aspect-[4/3] w-full rounded-2xl overflow-hidden shadow-2xl bg-gray-100 dark:bg-gray-800 relative z-10">
-          <div class="w-full h-full bg-cover bg-center" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBkq_fArDZcS_Oe08BgbsGxjRdNeEG6F8J5r0szHUEEefJRo8OBkrerJhn6kASfeq3I-lQy-Tw8NUhEbLQLusG-3BkshMGxa4Cm_AWmi_rGeqyRdTXYuJjYEwmBJ9RfP4RMFh5hDprrcZ5oCUvSStbmrE5n47npr3AjFn5UjKUBD32_r3Jixn7N58yBYGcCF2ZLwg4ukWrroyR2oXlH1V0H_0deTxfNsLhBtMpfCNgZWe3jVqGSG8ITYgo0dqAxo0BN-1vx71rhHxPC');"></div>
+          <div class="w-full h-full bg-cover bg-center" style="background-image: url('images/office.png');"></div>
           <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
           <div class="absolute bottom-6 left-6 right-6 text-white">
             <p class="font-bold text-lg">Excellence in every case.</p>
