--- a/src/app/components/about/stats-bar/stats-bar.html
+++ b/src/app/components/about/stats-bar/stats-bar.html
@@ -6,12 +6,12 @@
         <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">Years of Experience</span>
       </div>
       <div class="flex flex-col gap-1">
-        <span class="text-4xl font-black text-white">5k+</span>
+        <span class="text-4xl font-black text-white">1k+</span>
         <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">Cases Won</span>
       </div>
       <div class="flex flex-col gap-1">
-        <span class="text-4xl font-black text-white">50+</span>
-        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">Expert Attorneys</span>
+        <span class="text-4xl font-black text-white">15+</span>
+        <span class="text-sm font-medium text-blue-100 uppercase tracking-wider">Expert Teams</span>
       </div>
       <div class="flex flex-col gap-1">
         <span class="text-4xl font-black text-white">98%</span>
