--- a/src/app/components/about/team-section/team-section.html
+++ b/src/app/components/about/team-section/team-section.html
@@ -8,7 +8,7 @@
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
       @for (attorney of attorneys; track attorney.id) {
-        <a [routerLink]="['/attorneys', attorney.id]" class="group relative cursor-pointer block">
+        <a [routerLink]="['/lawyers', attorney.id]" class="group relative cursor-pointer block">
           <div class="aspect-[3/4] w-full overflow-hidden rounded-xl bg-gray-200">
             <div class="h-full w-full bg-cover bg-top transition-transform duration-300 group-hover:scale-105" [style.background-image]="'url(' + attorney.image + ')'"></div>
           </div>
