--- a/src/app/components/practice-areas/areas-grid/areas-grid.html
+++ b/src/app/components/practice-areas/areas-grid/areas-grid.html
@@ -1,4 +1,4 @@
-<div class="w-full flex justify-center py-10">
+<div class="w-full flex justify-center py-10" id="practice-areas-list">
   <div class="layout-content-container flex flex-col max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8 flex-1 w-full">
     <div class="flex flex-col gap-10 px-4 py-4 @container">
       <div class="flex flex-col gap-4 text-center md:text-left">
