--- a/src/components/cta/cta.html
+++ b/src/components/cta/cta.html
@@ -8,10 +8,10 @@
         <span class="material-symbols-outlined">calendar_month</span>
         Book Appointment
       </button>
-      <button class="w-full sm:w-auto px-8 h-14 bg-transparent border border-white/20 hover:bg-white/10 text-white font-bold rounded-lg text-lg transition-colors flex items-center justify-center gap-2">
+      <a href="tel:+19058863339" class="w-full sm:w-auto px-8 h-14 bg-transparent border border-white/20 hover:bg-white/10 text-white font-bold rounded-lg text-lg transition-colors flex items-center justify-center gap-2">
         <span class="material-symbols-outlined">call</span>
         (905) 886-3339
-      </button>
+      </a>
     </div>
   </div>
 </section>
